# text_slicer

./: README.md  pyproject.toml
src/: main.py
