[tool.poetry]
name = "fatiador-de-texto"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fatiador_de_texto"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
mypy = "^1.8.0"
types-pyinstaller = "^6.4.0.20240212"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
